--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ channels:
     - soumith
 dependencies:
     - python==3.5.2
-    - numpy
+    - numpy==1.13.3
     - scipy
     - path.py
     - python-dateutil
